[package]
name = "store"
version = "0.1.0"
authors = ["Mauricio Muratori <maurimura@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.mongodb]
version = "1.1.0"
default-features = false
features = ["async-std-runtime"]